--- a/Javascript/javascript.html
+++ b/Javascript/javascript.html
@@ -17,7 +17,7 @@
 
   <div class="row mt-3">
     <div class="col">
-      <button class="btn btn-primary btn-block" onclick="exibirOperacoes()">Exibir Operações</button>
+      <button class="btn btn-primary btn-block" onclick="exibirOperacoes()">Exibir Operações 10 e 100</button>
     </div>
   </div>
 
@@ -115,12 +115,12 @@
   function exibirOperacoes() {
     var num1 = 10;
     var num2 = 100;
-    var resultado = "Soma: " + (num1 + num2) + "<br>" +
-                    "Subtração: " + (num2 - num1) + "<br>" +
-                    "Divisão: " + (num2 / num1) + "<br>" +
+    var resultado = "Soma: " + (num1 + num2) + "\n" +
+                    "Subtração: " + (num2 - num1) + "\n" +
+                    "Divisão: " + (num2 / num1) + "\n" +
                     "Multiplicação: " + (num1 * num2);
 
-    document.getElementById("resultado").innerHTML = resultado;
+    alert(resultado);
   }
 
   function exibirLoop() {
